--- a/index.html
+++ b/index.html
@@ -455,6 +455,58 @@
     </div>
 </section>
 
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="footer-logo mb-5">
+                    <img src="images/logo-alt.png" alt="footer-logo">
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="footer__block">
+                    <h4 class="mb-3">Sitemap</h4>
+                    <ul class="footer__links p-0 m-0">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Blog</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="footer__block">
+                    <h4 class="mb-3">Services</h4>
+                    <ul class="footer__links p-0 m-0">
+                        <li><a href="#">Buy Instagram Followers</a></li>
+                        <li><a href="#">Buy Instagram Likes</a></li>
+                        <li><a href="#">Buy Instagram Views</a></li>
+                        <li><a href="#">Buy Automatic Likes</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="footer__block">
+                    <h4 class="mb-3">Important Links</h4>
+                    <ul class="footer__links p-0 m-0">
+                        <li><a href="#">Free Instagram Likes & Followers</a></li>
+                        <li><a href="#">Instagram Followers Count</a></li>
+                        <li><a href="#">Download Instagram Videos & Photos</a></li>
+                        <li><a href="#">Terms of Service</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 text-center">
+                <div class="footer__copyright">
+                    <p class="mb-0">Copyright © 2018 - instago.com - All Rights Reserved</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
 <!-- jQuery -->
 <script src="plugins/jQuery/jquery.min.js"></script>
 <!-- Bootstrap JS -->
