Added FAQ,Blog,Login,Video Download page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Gramblast</title>
+  <title>Instago</title>
 
   
   <!-- mobile responsive meta -->
@@ -66,18 +66,18 @@
                         Tools
                     </a>
                     <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="#">Download Instagram Videos & Photos</a>
+                        <a class="dropdown-item" href="instagram-downloader.html">Download Instagram Videos & Photos</a>
                         <a class="dropdown-item" href="#">Live Follower Count</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Blog</a>
+                    <a class="nav-link" href="blog.html">Blog</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link">Support</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Login</a>
+                    <a class="nav-link" href="login.html">Login</a>
                 </li>
             </ul>
         </div>
@@ -360,7 +360,7 @@
     </div>
 </section>
 
-<section class="section blog">
+<section class="section blog bg-primary-gradient">
     <div class="container">
         <div class="row">
             <div class="col-lg-6 mx-auto text-center">
@@ -449,7 +449,7 @@
                 </article>
             </div>
             <div class="col-12 text-center">
-                <a href="#" class="btn btn-white">More Stories</a>
+                <a href="blog.html" class="btn btn-white">More Stories</a>
             </div>
         </div>
     </div>
@@ -467,10 +467,10 @@
                 <div class="footer__block">
                     <h4 class="mb-3">Sitemap</h4>
                     <ul class="footer__links p-0 m-0">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">FAQ</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
             </div>
