Added Form control style & Change Feature style

--- a/instagram-downloader.html
+++ b/instagram-downloader.html
@@ -35,7 +35,7 @@
 <nav class="main-nav navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
         <!-- Logo -->
-        <a class="navbar-brand page-scroll" href="#hero">
+        <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="logo">
         </a>
         <!-- Toogle Button -->
@@ -74,7 +74,7 @@
                     <a class="nav-link" href="blog.html">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Support</a>
+                    <a class="nav-link" href="faq.html">Support</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="login.html">Login</a>
@@ -213,7 +213,7 @@
 <!-- Match Height -->
 <script src="plugins/match-height/match-height.js"></script>
 <!-- Smooth Scroll -->
-<!-- <script src="plugins/smooth-scroll/smooth-scroll.js"></script> -->
+<!-- <script src="plugins/smooth-scroll/smooth-scrollbar.js"></script> -->
 <!-- AOS -->
 <script src="plugins/aos/aos.js"></script>
 <!-- Headroom Js -->
