--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
 <nav class="main-nav navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
         <!-- Logo -->
-        <a class="navbar-brand page-scroll" href="#hero">
+        <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="logo">
         </a>
         <!-- Toogle Button -->
@@ -74,7 +74,7 @@
                     <a class="nav-link" href="blog.html">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Support</a>
+                    <a class="nav-link" href="faq.html">Support</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="login.html">Login</a>
@@ -109,9 +109,9 @@
             <div class="col-lg-5 mx-auto text-center">
                 <h2 class="section__title-center">Login</h2>
                 <div class="rounded main-shadow p-5 bg-white">
-                    <p>This login page is for tracking and altering your <a href="#" class="text-link">automatic likes subscription</a>. Login with credentials that you entered during checkout.</p>
+                    <p class="mb-4">This login page is for tracking and altering your <a href="#" class="text-link">automatic likes subscription</a>. Login with credentials that you entered during checkout.</p>
                     <form action="#">
-                        <input type="email" class="form-control mb-4" id="mail" name="email" placeholder="Your e-mail">
+                        <input type="email" class="form-control mb-3" id="mail" name="email" placeholder="Your e-mail">
                         <input type="password" class="form-control mb-4" id="pass" name="password" placeholder="Password">
                         <button type="submit" value="send" class="btn btn-primary btn-lg mb-4">login</button>
                         <div class="login-reset">
@@ -185,7 +185,7 @@
 <!-- Match Height -->
 <script src="plugins/match-height/match-height.js"></script>
 <!-- Smooth Scroll -->
-<!-- <script src="plugins/smooth-scroll/smooth-scroll.js"></script> -->
+<!-- <script src="plugins/smooth-scroll/smooth-scrollbar.js"></script> -->
 <!-- AOS -->
 <script src="plugins/aos/aos.js"></script>
 <!-- Headroom Js -->
