--- a/login.html
+++ b/login.html
@@ -52,10 +52,10 @@
                         Services
                     </a>
                     <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="#">Buy Instagram Likes</a>
-                        <a class="dropdown-item" href="#">Buy Instagram Followers</a>
-                        <a class="dropdown-item" href="#">Buy Instagram Views</a>
-                        <a class="dropdown-item" href="#">Automatic Likes</a>
+                        <a class="dropdown-item" href="instagram-likes.html">Buy Instagram Likes</a>
+                        <a class="dropdown-item" href="instagram-views.html">Buy Instagram Views</a>
+                        <a class="dropdown-item" href="instagram-followers.html">Buy Instagram Followers</a>
+                        <a class="dropdown-item" href="auto-likes.html">Automatic Likes</a>
                     </div>
                 </li>
                 <li class="nav-item">
