--- a/instagram-downloader.html
+++ b/instagram-downloader.html
@@ -59,7 +59,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Free Trial</a>
+                    <a class="nav-link" href="free-trial.html">Free Trial</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown">
