Modified Hero area Homepage

--- a/instagram-followers.html
+++ b/instagram-followers.html
@@ -462,7 +462,7 @@
 <!-- Match Height -->
 <script src="plugins/match-height/match-height.js"></script>
 <!-- Smooth Scroll -->
-<!-- <script src="plugins/smooth-scroll/smooth-scrollbar.js"></script> -->
+<script src="plugins/smooth-scroll/smooth-scroll.js"></script>
 <!-- AOS -->
 <script src="plugins/aos/aos.js"></script>
 <!-- Headroom Js -->
