--- a/faq.html
+++ b/faq.html
@@ -67,7 +67,7 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-right">
                         <a class="dropdown-item" href="instagram-downloader.html">Download Instagram Videos & Photos</a>
-                        <a class="dropdown-item" href="#">Live Follower Count</a>
+                        <a class="dropdown-item" href="stats.html">Live Follower Count</a>
                     </div>
                 </li>
                 <li class="nav-item">
