Added Odometer on stats page

--- a/blog.html
+++ b/blog.html
@@ -19,6 +19,8 @@
   <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
   <!-- AOS -->
   <link rel="stylesheet" href="plugins/aos/aos.css">
+  <!-- Odometer -->
+  <link rel="stylesheet" href="plugins/odometer/odometer-theme-default.css">
   <!-- Stylesheets -->
   <link href="css/style.css" rel="stylesheet">
   
@@ -296,6 +298,8 @@
 <script src="plugins/headroomjs/headroom.min.js"></script>
 <!-- Parallax -->
 <script src="plugins/parallax/parallax.min.js"></script>
+<!-- Odometer -->
+<script src="plugins/odometer/odometer.min.js"></script>
 <!-- Main Script -->
 <script src="js/script.js"></script>
 </body>
