Homepage SVG Added & Some page Responsive

--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
     </a>
 </section>
 
-<section class="service" id="service">
-    <div class="service__item" style="background-image: url('images/backgrounds/background_f.svg');">
+<section class="service" id="service" style="background-image: url('images/backgrounds/pattern-bg.svg');">
+    <div class="service__item">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 ml-auto">
@@ -314,34 +314,34 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="service__image followers">
+                    <div class="service__image followers" data-aos="fade-left" data-aos-duration="500">
                         <div class="image right">
-                            <img src="images/f-illu/services-followers-messages.svg" alt="right">
+                            <img src="images/f-illu/followers-10k.svg" alt="illustration">
                         </div>
-                        <div class="image left-top">
-                            <img src="images/f-illu/services-followers-profile-1.svg" alt="right">
+                        <div class="image middle">
+                            <img src="images/f-illu/instagram-followers.svg" alt="illustration">
                         </div>
-                        <div class="image left-middle">
-                            <img src="images/f-illu/services-followers-profile-2.svg" alt="right">
-                        </div>
-                        <div class="image left-bottom">
-                            <img src="images/f-illu/services-followers-profile-3.svg" alt="right">
+                        <div class="image left">
+                            <img src="images/f-illu/followers-15k.svg" alt="illustration">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="service__item" style="background-image: url('images/backgrounds/background_l.svg');">
+    <div class="service__item">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <div class="service__image likes">
+                    <div class="service__image likes" data-aos="fade-right" data-aos-duration="500">
                         <div class="image left">
-                            <img src="images/l-illu/services-views-video.svg" alt="left">
+                            <img src="images/l-illu/15k-likes.svg" alt="left">
+                        </div>
+                        <div class="image middle">
+                            <img src="images/l-illu/instagram-like.svg" alt="illustration">
                         </div>
                         <div class="image right">
-                            <img src="images/l-illu/services-likes-engagement.svg" alt="right">
+                            <img src="images/l-illu/engagement.svg" alt="left">
                         </div>
                     </div>
                 </div>
@@ -358,7 +358,7 @@
             </div>
         </div>
     </div>
-    <div class="service__item" style="background-image: url('images/backgrounds/background_v.svg');">
+    <div class="service__item">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 ml-auto">
@@ -372,34 +372,37 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="service__image followers">
+                    <div class="service__image views" data-aos="fade-left" data-aos-duration="500">
+                        <div class="image left">
+                            <img src="images/v-illu/15k-likes.svg" alt="left">
+                        </div>
+                        <div class="image middle">
+                            <img src="images/v-illu/instagram-followers.svg" alt="illustration">
+                        </div>
                         <div class="image right">
-                            <img src="images/f-illu/services-followers-messages.svg" alt="right">
-                        </div>
-                        <div class="image left-top">
-                            <img src="images/f-illu/services-followers-profile-1.svg" alt="right">
-                        </div>
-                        <div class="image left-middle">
-                            <img src="images/f-illu/services-followers-profile-2.svg" alt="right">
-                        </div>
-                        <div class="image left-bottom">
-                            <img src="images/f-illu/services-followers-profile-3.svg" alt="right">
+                            <img src="images/v-illu/view.svg" alt="left">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="service__item" style="background-image: url('images/backgrounds/background_a.svg');">
+    <div class="service__item">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <div class="service__image likes">
-                        <div class="image left">
-                            <img src="images/l-illu/services-views-video.svg" alt="left">
+                    <div class="service__image a-likes" data-aos="fade-right" data-aos-duration="500">
+                        <div class="image right-top">
+                            <img src="images/al-illu/view.svg" alt="illustration">
                         </div>
-                        <div class="image right">
-                            <img src="images/l-illu/services-likes-engagement.svg" alt="right">
+                        <div class="image right-bottom">
+                            <img src="images/al-illu/followers.svg" alt="illustration">
+                        </div>
+                        <div class="image middle">
+                            <img src="images/al-illu/automatic-likes.svg" alt="illustration">
+                        </div>
+                        <div class="image left">
+                            <img src="images/al-illu/likes.svg" alt="illustration">
                         </div>
                     </div>
                 </div>
@@ -431,7 +434,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-6">
-                <div class="step__item mx-2">
+                <div class="step__item mx-2" data-aos="fade-right" data-aos-duration="500">
                     <span class="number">1</span>
                     <h3>Choose Package</h3>
                     <p class="mb-0">
@@ -441,7 +444,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <div class="step__item mx-2">
+                <div class="step__item mx-2" data-aos="fade-left" data-aos-duration="500">
                     <span class="number">2</span>
                     <h3>Checkout</h3>
                     <p class="mb-0">
@@ -451,7 +454,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <div class="step__item mx-2">
+                <div class="step__item mx-2" data-aos="fade-up" data-aos-duration="500">
                     <span class="number">3</span>
                     <h3>See Results</h3>
                     <p class="mb-0">
@@ -463,7 +466,7 @@
         </div>
         <div class="row mt-5">
             <div class="col-lg-6 mx-auto">
-                <div class="trialbox text-center">
+                <div class="trialbox text-center" data-aos="fade-in" data-aos-duration="500">
                     <h3>How about a free trial?</h3>
                     <p>Don’t waste your time only reading about our services. Use our <strong>free trial</strong> and see how it works for yourself!</p>
                     <a href="#" class="btn btn-primary">Try Free Trial</a>
@@ -639,11 +642,11 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div class="footer-logo mb-5">
+                <div class="footer-logo mb-5 text-center text-sm-left">
                     <img src="images/logo-alt.png" alt="footer-logo">
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-md-4 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
                 <div class="footer__block">
                     <h4 class="mb-3">Sitemap</h4>
                     <ul class="footer__links p-0 m-0">
@@ -654,7 +657,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-md-4 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
                 <div class="footer__block">
                     <h4 class="mb-3">Services</h4>
                     <ul class="footer__links p-0 m-0">
@@ -665,7 +668,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-md-4 col-sm-12 mb-5 mb-md-0 text-center text-sm-left">
                 <div class="footer__block">
                     <h4 class="mb-3">Important Links</h4>
                     <ul class="footer__links p-0 m-0">
