--- a/instagram-downloader.html
+++ b/instagram-downloader.html
@@ -124,26 +124,26 @@
 
 <section class="section bg-primary-gradient">
     <div class="container">
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="col-lg-12 text-center">
                 <h2 class="text-white mb-3">InstaSave For Instagram In 3 Steps</h2>
                 <p class="text-white mb-5">Download Instagram videos and pictures online by simply pasting the media URL <br> above and hitting "Download Gram”. Our tool is the best Instagram video & photo <br>downloader online.</p>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
                 <div class="card border-0 text-center main-shadow p-3">
                     <h3>01</h3>
                     <p>Copy Instagram Post URL</p>
                     <img class="img-fluid w-100" src="images/download-steps/instasave-step-1.svg" alt="step-1">
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
                 <div class="card border-0 text-center main-shadow p-3">
                     <h3>02</h3>
                     <p>Paste URL in the field above</p>
                     <img class="img-fluid w-100" src="images/download-steps/instasave-step-2.svg" alt="step-2">
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
                 <div class="card border-0 text-center main-shadow p-3">
                     <h3>03</h3>
                     <p>Press Download</p>
@@ -158,11 +158,11 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div class="footer-logo mb-5">
+                <div class="footer-logo mb-5 text-center text-sm-left">
                     <img src="images/logo-alt.png" alt="footer-logo">
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-md-4 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
                 <div class="footer__block">
                     <h4 class="mb-3">Sitemap</h4>
                     <ul class="footer__links p-0 m-0">
@@ -173,7 +173,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-md-4 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
                 <div class="footer__block">
                     <h4 class="mb-3">Services</h4>
                     <ul class="footer__links p-0 m-0">
@@ -184,7 +184,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-md-4 col-sm-12 mb-5 mb-md-0 text-center text-sm-left">
                 <div class="footer__block">
                     <h4 class="mb-3">Important Links</h4>
                     <ul class="footer__links p-0 m-0">
