--- a/free-trial.html
+++ b/free-trial.html
@@ -232,11 +232,11 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div class="footer-logo mb-5">
+                <div class="footer-logo mb-5 text-center text-sm-left">
                     <img src="images/logo-alt.png" alt="footer-logo">
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-md-4 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
                 <div class="footer__block">
                     <h4 class="mb-3">Sitemap</h4>
                     <ul class="footer__links p-0 m-0">
@@ -247,7 +247,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-md-4 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
                 <div class="footer__block">
                     <h4 class="mb-3">Services</h4>
                     <ul class="footer__links p-0 m-0">
@@ -258,7 +258,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-md-4 col-sm-12 mb-5 mb-md-0 text-center text-sm-left">
                 <div class="footer__block">
                     <h4 class="mb-3">Important Links</h4>
                     <ul class="footer__links p-0 m-0">
