Done Homepage Responsive

--- a/faq.html
+++ b/faq.html
@@ -42,8 +42,7 @@
         </a>
         <!-- Toogle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav">
-            <span class="navbar-toggler-icon">
-                <img src="images/nav-toogler.png" alt="menu-button">
+            <span class="ti-menu">
             </span>
         </button>
         <div class="collapse navbar-collapse nav-list" id="mainNav">
@@ -195,12 +194,12 @@
                     <div class="card">
                         <div class="card-header" id="headingSeven">
                             <h5 class="mb-0 collapsed" data-toggle="collapse" data-target="#collapseSeven">
-                                Why Gramblast?
+                                Why Instawhizz?
                             </h5>
                         </div>
                         <div id="collapseSeven" class="collapse" data-parent="#accordionExample">
                             <div class="card-body">
-                                We, at Gramblast, take customer satisfaction very seriously. So, with our 24 hour support, timely delivery of high
+                                We, at Instawhizz, take customer satisfaction very seriously. So, with our 24 hour support, timely delivery of high
                                 quality products and careful planning of induction of services in your Instagram account, everything will be done in a
                                 seamless manner. What more, if you need custom packages, we would be highly obligated to create one just for you, in
                                 accordance to your specifications. All you have to do is head over to our Contact Us page.
@@ -286,10 +285,10 @@
                 <div class="footer__block">
                     <h4 class="mb-3">Services</h4>
                     <ul class="footer__links p-0 m-0">
-                        <li><a href="#">Buy Instagram Followers</a></li>
-                        <li><a href="#">Buy Instagram Likes</a></li>
-                        <li><a href="#">Buy Instagram Views</a></li>
-                        <li><a href="#">Buy Automatic Likes</a></li>
+                        <li><a href="instagram-followers.html">Buy Instagram Followers</a></li>
+                        <li><a href="instagram-likes.html">Buy Instagram Likes</a></li>
+                        <li><a href="instagram-views.html">Buy Instagram Views</a></li>
+                        <li><a href="auto-likes.html">Buy Automatic Likes</a></li>
                     </ul>
                 </div>
             </div>
