--- a/instagram-followers.html
+++ b/instagram-followers.html
@@ -42,8 +42,7 @@
         </a>
         <!-- Toogle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav">
-            <span class="navbar-toggler-icon">
-                <img src="images/nav-toogler.png" alt="menu-button">
+            <span class="ti-menu">
             </span>
         </button>
         <div class="collapse navbar-collapse nav-list" id="mainNav">
@@ -365,25 +364,25 @@
             <div class="col-sm-6">
                 <div class="feature__item mx-1 green">
                     <h3>Will i get banned from Instagram?</h3>
-                    <p>Absolutely not, this should not even be of concern because Gramblast takes customer page security very seriously, so much so that we have created a groundbreaking system that makes sure your page will never get banned due to inactive Instagram followers, we do this by keeping our pages healthy by being up to par and updated with Instagram's guidelines. we have serviced thousands of Instagram pages over the years and not one page ban has been reported to us nor have we came across banned pages in our past customer diagnostic tests.</p>
+                    <p>Absolutely not, this should not even be of concern because Instawhizz takes customer page security very seriously, so much so that we have created a groundbreaking system that makes sure your page will never get banned due to inactive Instagram followers, we do this by keeping our pages healthy by being up to par and updated with Instagram's guidelines. we have serviced thousands of Instagram pages over the years and not one page ban has been reported to us nor have we came across banned pages in our past customer diagnostic tests.</p>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="feature__item mx-1 green">
                 <h3>Do you need my password?</h3>
-                <p>No, think about it this way, when you follow someone on Instagram, would you need their password? Of course not, and Gramblast works the same way, when your page is being advertised in our network, we place your page in duration to start receiving followers, when your page reaches the goal needed, your page is removed leaving you with a <a href="#">batch of brand new Instagram followers</a>. We do not condone the use of any app on the App Store or Play Store that offer the option to buy Instagram followers, they will ask for your password and Instagram will detect it as account theft and leave your account locked or terminated.</p>
+                <p>No, think about it this way, when you follow someone on Instagram, would you need their password? Of course not, and Instawhizz works the same way, when your page is being advertised in our network, we place your page in duration to start receiving followers, when your page reaches the goal needed, your page is removed leaving you with a <a href="#">batch of brand new Instagram followers</a>. We do not condone the use of any app on the App Store or Play Store that offer the option to buy Instagram followers, they will ask for your password and Instagram will detect it as account theft and leave your account locked or terminated.</p>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="feature__item mx-1 green">
                     <h3>Will my Instagram followers drop?</h3>
-                    <p>No, because of the aforementioned quality followers that obey the Instagram guidelines. At any rate, we also try our best to keep your followers to stay on your profile for as long as possible, after your purchase is made we monitor your account over a two week period to make sure you do not lose any of your followers, that is one of many strong suits Gramblast holds.</p>
+                    <p>No, because of the aforementioned quality followers that obey the Instagram guidelines. At any rate, we also try our best to keep your followers to stay on your profile for as long as possible, after your purchase is made we monitor your account over a two week period to make sure you do not lose any of your followers, that is one of many strong suits Instawhizz holds.</p>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="feature__item mx-1 green">
                 <h3>What is the quality of the followers? </h3>
-                <p>The quality of our followers are outstanding. Quality is the most important trait of Gramblast and we go the extra mile to make sure the followers that our customers order will be long-lasting, realistic, affordable, and dependable. Our competitors make claims that there service is the “best place to buy followers” but 99.9% of the time, those are empty claim. Gramblast is an honest brand, so we don't claim that you gain active followers, or that we are the best, but what we do claim is that you can buy followers on Instagram for cheap, with a fast delivery time and robust convenience.</p>
+                <p>The quality of our followers are outstanding. Quality is the most important trait of Instawhizz and we go the extra mile to make sure the followers that our customers order will be long-lasting, realistic, affordable, and dependable. Our competitors make claims that there service is the “best place to buy followers” but 99.9% of the time, those are empty claim. Instawhizz is an honest brand, so we don't claim that you gain active followers, or that we are the best, but what we do claim is that you can buy followers on Instagram for cheap, with a fast delivery time and robust convenience.</p>
                 </div>
             </div>
             <div class="col-sm-6">
@@ -395,7 +394,7 @@
             <div class="col-sm-6">
                 <div class="feature__item mx-1 green">
                 <h3>So, What Are You Waiting For?</h3>
-                <p>You're a few clicks away from growing your followers on Instagram and taking one big jump towards becoming the next big Instagram influencer, with a robust instant delivery service, and strong confidence as the most competitive cheapest pricing on the market, backed by incredible customer service, What more could you ask for? Whether you are looking for 100 followers, or 10,000 in a quick fast turnaround time, rest assured Gramblast has you covered.</p>
+                <p>You're a few clicks away from growing your followers on Instagram and taking one big jump towards becoming the next big Instagram influencer, with a robust instant delivery service, and strong confidence as the most competitive cheapest pricing on the market, backed by incredible customer service, What more could you ask for? Whether you are looking for 100 followers, or 10,000 in a quick fast turnaround time, rest assured Instawhizz has you covered.</p>
                 </div>
             </div>
         </div>
@@ -425,10 +424,10 @@
                 <div class="footer__block">
                     <h4 class="mb-3">Services</h4>
                     <ul class="footer__links p-0 m-0">
-                        <li><a href="#">Buy Instagram Followers</a></li>
-                        <li><a href="#">Buy Instagram Likes</a></li>
-                        <li><a href="#">Buy Instagram Views</a></li>
-                        <li><a href="#">Buy Automatic Likes</a></li>
+                        <li><a href="instagram-followers.html">Buy Instagram Followers</a></li>
+                        <li><a href="instagram-likes.html">Buy Instagram Likes</a></li>
+                        <li><a href="instagram-views.html">Buy Instagram Views</a></li>
+                        <li><a href="auto-likes.html">Buy Automatic Likes</a></li>
                     </ul>
                 </div>
             </div>
