--- a/instagram-downloader.html
+++ b/instagram-downloader.html
@@ -42,8 +42,7 @@
         </a>
         <!-- Toogle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav">
-            <span class="navbar-toggler-icon">
-                <img src="images/nav-toogler.png" alt="menu-button">
+            <span class="ti-menu">
             </span>
         </button>
         <div class="collapse navbar-collapse nav-list" id="mainNav">
@@ -177,10 +176,10 @@
                 <div class="footer__block">
                     <h4 class="mb-3">Services</h4>
                     <ul class="footer__links p-0 m-0">
-                        <li><a href="#">Buy Instagram Followers</a></li>
-                        <li><a href="#">Buy Instagram Likes</a></li>
-                        <li><a href="#">Buy Instagram Views</a></li>
-                        <li><a href="#">Buy Automatic Likes</a></li>
+                        <li><a href="instagram-followers.html">Buy Instagram Followers</a></li>
+                        <li><a href="instagram-likes.html">Buy Instagram Likes</a></li>
+                        <li><a href="instagram-views.html">Buy Instagram Views</a></li>
+                        <li><a href="auto-likes.html">Buy Automatic Likes</a></li>
                     </ul>
                 </div>
             </div>
