--- a/instagram-views.html
+++ b/instagram-views.html
@@ -42,8 +42,7 @@
         </a>
         <!-- Toogle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav">
-            <span class="navbar-toggler-icon">
-                <img src="images/nav-toogler.png" alt="menu-button">
+            <span class="ti-menu">
             </span>
         </button>
         <div class="collapse navbar-collapse nav-list" id="mainNav">
@@ -96,7 +95,7 @@
                         Buy Instagram Views <br> With Instant <br> Delivery
                     </h2>
                     <p>
-                        Start gaining instant views when you buy Instagram video views from Gramblast. 100 Instagram views will cost you as cheap as $1.99! We remain incomparable and the best on the net between our competitors!
+                        Start gaining instant views when you buy Instagram video views from Instawhizz. 100 Instagram views will cost you as cheap as $1.99! We remain incomparable and the best on the net between our competitors!
                     </p>
                     <a href="#service" class="btn btn-white page-scroll">
                         Try 100 Views for $1.99
@@ -359,7 +358,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="text-white mb-4">How to Buy Instagram Views</h2>
-                <p class="text-white mb-4">The process to buying Instagram views from Gramblast is simple!</p>
+                <p class="text-white mb-4">The process to buying Instagram views from Instawhizz is simple!</p>
             </div>
             <div class="col-lg-4">
                 <div class="buy__steps">
@@ -490,10 +489,10 @@
                 <div class="footer__block">
                     <h4 class="mb-3">Services</h4>
                     <ul class="footer__links p-0 m-0">
-                        <li><a href="#">Buy Instagram Followers</a></li>
-                        <li><a href="#">Buy Instagram Likes</a></li>
-                        <li><a href="#">Buy Instagram Views</a></li>
-                        <li><a href="#">Buy Automatic Likes</a></li>
+                        <li><a href="instagram-followers.html">Buy Instagram Followers</a></li>
+                        <li><a href="instagram-likes.html">Buy Instagram Likes</a></li>
+                        <li><a href="instagram-views.html">Buy Instagram Views</a></li>
+                        <li><a href="auto-likes.html">Buy Automatic Likes</a></li>
                     </ul>
                 </div>
             </div>
