--- a/stats.html
+++ b/stats.html
@@ -42,8 +42,7 @@
         </a>
         <!-- Toogle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav">
-            <span class="navbar-toggler-icon">
-                <img src="images/nav-toogler.png" alt="menu-button">
+            <span class="ti-menu">
             </span>
         </button>
         <div class="collapse navbar-collapse nav-list" id="mainNav">
@@ -123,7 +122,7 @@
 							<a href="#" class="btn btn-primary">Follow User</a>
 						</div>
 						<h3 class="text-white">Share!</h3>
-						<a class="text-white" href="https://gramblast.com/stats?selenagomez">https://gramblast.com/stats?selenagomez</a>
+						<a class="text-white" href="https://Instawhizz.com/stats?selenagomez">https://Instawhizz.com/stats?selenagomez</a>
 					</div>
 					<div class="error-msg">
 						! Something went wrong. Please try again later.
@@ -162,10 +161,10 @@
                 <div class="footer__block">
                     <h4 class="mb-3">Services</h4>
                     <ul class="footer__links p-0 m-0">
-                        <li><a href="#">Buy Instagram Followers</a></li>
-                        <li><a href="#">Buy Instagram Likes</a></li>
-                        <li><a href="#">Buy Instagram Views</a></li>
-                        <li><a href="#">Buy Automatic Likes</a></li>
+                        <li><a href="instagram-followers.html">Buy Instagram Followers</a></li>
+                        <li><a href="instagram-likes.html">Buy Instagram Likes</a></li>
+                        <li><a href="instagram-views.html">Buy Instagram Views</a></li>
+                        <li><a href="auto-likes.html">Buy Automatic Likes</a></li>
                     </ul>
                 </div>
             </div>
